删除一些没用的文件

--- a/zjuthesis.tex
+++ b/zjuthesis.tex
@@ -1,33 +1,18 @@
-% Zhejiang University Graduation Thesis/Design Template
-% Author     : Zixuan Wang
-% Email      : zxwang42 [at] gmail.com
-% Update     : https://github.com/TheNetAdmin/zjuthesis/releases
-% Discussion : https://github.com/TheNetAdmin/zjuthesis/discussions
-% Documents  : https://thenetadmin.github.io/zjuthesis
-
-% If you have trouble using this template, please:
-%   1. First go through the online documentations mentioned above, to see if 
-%      there're already solutions.
-%   2. Go through GitHub Issue list, to see if there're discussions on similar
-%      problems
-%   3. Open a GitHub Issue to discuss with developers
-%   4. If you don't know how to use GitHub, you can send me an email
-
 \documentclass[
     % Debugging Settings
     PrintFilePath   = false,            % print tex file path for each page
     % Layout Settings
     TwoSide         = true,             % set to false if don't need empty pages
     % Thesis Info
-    StudentName     = 姓名,
-    StudentID       = 学号,
-    AdvisorName     = 指导教师,
-    Grade           = 2014,            % only the year, no '级'
-    Major           = 专业,
-    Department      = 学院,
-    SubmitDate      = 递交日期,
+    StudentName     = 陈荣,
+    StudentID       = 22321105,
+    AdvisorName     = 郑文庭,
+    Grade           = 2023,            % only the year, no '级'
+    Major           = 计算机科学与技术,
+    Department      = 计算机科学与技术学院,
+    SubmitDate      = 2025年12月25日,
     MajorFormat     = general,
-    Degree          = undergraduate,   % 'undergraduate' or 'graduate'
+    Degree          = graduate,   % 'undergraduate' or 'graduate'
     Type            = thesis,          % 'thesis'   or 'design'
     Period          = final,           % 'proposal' or 'paper' or 'final'
     BlindReview     = false,           % 'false'    or 'true'
@@ -47,8 +32,8 @@
 ]{zjuthesis}
 
 %% Uncomment the following lines if you need multi line titles on cover pages
-% \titletwolines{毕业论文题目第一行}{毕业论文题目第二行}
-% \titleengtwolines{English Title Line One}{English Title Line Two}
+\titletwolines{基于生成式视觉引导的三维}{场景运镜参数逆向求解方法}
+\titleengtwolines{English Title Line One English}{English Title Line One English}
 
 %% Uncomment the following lines if you need multi line major names on cover pages
 % \majortwolines{专业名第一行}{专业名第二行}
