--- a/zjuthesis.tex
+++ b/zjuthesis.tex
@@ -32,7 +32,7 @@
 ]{zjuthesis}
 
 %% Uncomment the following lines if you need multi line titles on cover pages
-\titletwolines{基于生成式视觉引导的三维}{场景运镜参数逆向求解方法}
+\titletwolines{基于生成式视觉引导的}{三维场景运镜参数逆向求解方法}
 \titleengtwolines{English Title Line One English}{English Title Line One English}
 
 %% Uncomment the following lines if you need multi line major names on cover pages
