--- a/zjuthesis.tex
+++ b/zjuthesis.tex
@@ -33,7 +33,7 @@
 
 %% Uncomment the following lines if you need multi line titles on cover pages
 \titletwolines{基于生成式视觉引导的}{三维场景运镜参数逆向求解方法}
-\titleengtwolines{English Title Line One English}{English Title Line One English}
+\titleengtwolines{Research on Inverse Parameter}{Solving Method for Interactive 3D}
 
 %% Uncomment the following lines if you need multi line major names on cover pages
 % \majortwolines{专业名第一行}{专业名第二行}
