--- a/body/graduate/content.tex
+++ b/body/graduate/content.tex
@@ -41,7 +41,7 @@
 % TODO: 给出透视投影矩阵公式，定义世界坐标系、相机坐标系、像素坐标系的转换关系。
 \subsection{三维场景中的空间变换}
 % TODO: 解释欧拉角、四元数、齐次变换矩阵的基础知识。
-
+\cite{zjuthesisrules}
 \section{生成式人工智能基础}
 \subsection{扩散模型与文生图技术}
 % TODO: 简述 Latent Diffusion Models (LDM) 原理，重点解释 Prompt 对生成图像的控制作用。
