--- a/body/graduate/content.tex
+++ b/body/graduate/content.tex
@@ -5,31 +5,93 @@
 \label{chap:intro}
 
 \section{研究背景与意义}
-% TODO: 1. 宏观背景：AIGC时代三维内容生产的爆发与瓶颈。
-% TODO: 2. 行业痛点：影视制作中导演意图（自然语言）与底层参数（数学数值）的语义鸿沟。
-% TODO: 3. 现有技术局限：Text-to-3D 生成资产不可编辑、自动运镜缺乏语义理解。
-% TODO: 4. 本文研究价值：连接生成式AI与图形学引擎，实现“所见即所得”的工业级控制。
+近年来，随着元宇宙、数字孪生以及3A游戏（如Unreal Engine 5驱动的影视级游戏）的兴起，各行各业对高质量三维（3D）数字内容的需求呈现爆发式增长。传统的三维生产流程往往成本高昂且周期漫长，而生成式人工智能（Artificial Intelligence Generated Content, AIGC）技术的突破为这一困境带来了新的解决思路。特别是随着文生图（Text-to-Image）和文生三维（Text-to-3D）算法的成熟，创作者希望能够通过简单的自然语言指令，直接指挥计算机生成复杂的场景与镜头。这使得“智能化内容生产”成为当前计算机图形学与人工智能交叉领域的研究热点。
+
+然而，在当前的三维内容生产管线中，“虚拟运镜控制”依然是一个极具挑战性的技术瓶颈。这本质上是一个典型的“语义鸿沟”问题：艺术家和导演习惯使用抽象的感性语言（例如“具有压迫感的仰视”、“黄金分割构图”）来描述镜头意图；而三维渲染引擎（如Unity, Unreal Engine）的摄像机系统则依赖于底层的、精确的工程参数（如世界坐标位置、欧拉角旋转、视场角FOV等）。这种“感性视觉思维”与“理性数值逻辑”的不匹配，导致创作者往往需要陷入漫长的“试错循环”，通过手动反复调整参数来逼近预期的构图效果，严重制约了创作效率。
+
+针对这一问题，现有的解决方案主要分为两类，但均存在显著局限性：第一类是基于规则的辅助工具。这类方法通常预设了一些标准的运镜模板（如环绕、推拉），虽然保证了参数的精确性，但缺乏语义理解能力，无法灵活响应复杂的、个性化的自然语言指令。第二类是新兴的端到端AIGC技术。例如 DreamFusion 等文生三维（Text-to-3D）模型，虽然能直接生成三维物体，但其生成的几何拓扑往往杂乱无章，难以被标准的工业化管线所兼容和二次编辑。此外，现有的文生图模型（如Stable Diffusion）虽然能生成极具艺术感的二维图像，但缺乏空间深度信息，无法直接驱动三维场景中的摄像机。
+
+鉴于此，本文提出了一种“基于AIGC分镜头引导的虚拟摄像机参数逆向求解方法”。 本研究的核心思路是“以图生参”：利用成熟的文生图大模型作为中间语义层，先将抽象的自然语言转化为直观的二维参考图像；随后，通过本文提出的几何逆向投影算法，从二维图像中提取构图特征，精确解算出三维场景中的摄像机位姿参数。该方法不仅有效消除了语义鸿沟，实现了“所见即所得”的自动化运镜，还具备针对不同尺度物体（从微观昆虫到宏观航天器）的尺度自适应能力，具有重要的理论意义与工程应用价值。
 
 \section{国内外研究现状}
 % TODO: 文献综述，需要引用30-50篇论文。
-\subsection{文本生成三维场景技术}
-% TODO: 评述 NeRF, DreamFusion, Point-E 等生成式方法，指出其在工业管线中“不可编辑、拓扑混乱”的缺陷。
-\subsection{虚拟摄影机控制与自动运镜}
-% TODO: 评述传统的基于优化、基于规则的运镜方法，指出其缺乏“视觉语义”感知的不足。
-\subsection{跨模态生成与视觉语言模型}
-% TODO: 简述 CLIP, Stable Diffusion 在理解视觉语义方面的进展，作为本文的理论基石。
+\subsection{虚拟运镜控制技术研究现状}
 
-\section{本文主要研究内容}
-本文提出了一种基于生成式视觉先验的虚拟场景自动构图参数解算方法与系统。主要研究内容如下：
+虚拟摄像机控制（Virtual Camera Control）是计算机图形学中的经典问题，旨在计算满足特定构图需求和时空约束的摄像机参数。根据核心算法的不同，现有的研究工作主要可以分为三类：基于规则与几何约束的方法、基于搜索与优化的方法、以及基于数据驱动与智能学习的方法。
+
+\subsubsection{基于规则与几何约束的方法}
+这一类方法主要致力于将电影摄影中的经验法则转化为计算机可执行的几何规则。早期的经典工作如“虚拟摄影师”（The Virtual Cinematographer）系统 \cite{he1996virtual}，引入了分层有限状态机（Hierarchical Finite State Machines）来编码电影习语（Film Idioms），实现了对话场景的自动运镜切换。Christie 等人 \cite{christie2008camera} 进一步提出了基于语义的相机控制框架，通过定义“三分法构图”、“过肩镜头”等几何约束模板，将运镜问题转化为约束满足问题（Constraint Satisfaction Problem, CSP）。
+
+此类方法的优势在于结果的可预测性强，能够严格遵守预设的构图美学。然而，其局限性也十分明显：规则库的构建极其依赖专家知识，且难以穷举所有可能的场景配置。一旦遇到规则库之外的复杂动态场景，系统往往会因为约束冲突而失效。此外，这种基于模板的方式导致生成的运镜风格单一，缺乏艺术表现力。
+
+\subsubsection{基于搜索与优化的方法}
+为了突破规则库的限制，研究者们开始将运镜问题建模为高维空间中的数学优化问题。这类方法的核心思想是定义一个包含多种美学指标（如可见性、构图平衡、路径平滑度）的代价函数（Cost Function），通过求解最优解来确定摄像机参数。
+
+Lino 等人 \cite{lino2015intuitive} 提出的“环面空间”（Toric Space）是该领域的里程碑式工作。他们通过流形投影技术，将复杂的摄像机六自由度搜索空间压缩为二维的环面流形，极大地提高了求解两个目标物体构图问题的效率。Jiang 等人 \cite{jiang2020automatic} 则针对复杂遮挡环境下的路径规划问题，提出了一种基于可见性分析的自动优化算法，能够在保证主体持续可见的前提下生成平滑的运镜轨迹。
+
+然而，基于优化的方法通常计算开销巨大（Computationally Expensive），难以满足实时交互（Real-time Interaction）的需求。且由于非凸优化问题容易陷入局部最优，用户往往需要反复调整权重参数才能得到满意的结果。
+
+\subsubsection{基于数据驱动与智能学习的方法}
+近年来，随着深度学习（Deep Learning）与强化学习（Reinforcement Learning）的兴起，基于数据驱动的相机控制成为新的研究热点。与传统方法不同，这类方法试图让智能体（Agent）通过观察大量电影片段或在虚拟环境中试错来自主学习运镜策略。
+
+Jiang 等人 \cite{jiang2020example} 提出了一种范例驱动（Example-driven）的虚拟摄影系统，利用深度神经网络提取参考视频片段中的运镜风格，并将其迁移到新的三维动画中。此外，最新的综述 \cite{courant2025camera} 指出，利用深度强化学习（DRL）训练自主无人机或虚拟相机在动态环境中进行拍摄已取得显著进展。
+
+尽管如此，现有的学习型方法往往面临“黑盒”问题：用户很难通过明确的指令（如自然语言）来精确修正模型的输出结果。这导致了虽有风格但难以精准控制（Uncontrollable）的尴尬局面。
+\subsection{AIGC驱动的三维内容生成研究现状}
+
+生成式人工智能（AIGC）的飞速发展彻底改变了数字内容的生产方式。从最初的文本生成图像，到如今的文本生成三维模型，AIGC技术正在逐步重构计算机图形学的底层逻辑。
+
+\subsubsection{文本生成二维图像技术}
+文本生成图像（Text-to-Image, T2I）技术旨在将自然语言描述转化为高质量的二维图像。早期的生成对抗网络（GANs）虽然在特定领域表现优异，但难以处理开放域的复杂文本输入。
+
+近年来，基于扩散模型（Diffusion Models）的方法取得了突破性进展。Rombach 等人 \cite{rombach2022high} 提出的潜在扩散模型（Latent Diffusion Models, LDM），即广为人知的 Stable Diffusion，通过在低维潜在空间进行去噪过程，实现了高分辨率图像的快速生成。为了提升生成的可控性，Zhang 等人 \cite{zhang2023adding} 提出了 ControlNet，通过引入额外的空间条件（如边缘图、深度图、骨架图）来引导扩散过程，使得用户能够精确控制生成图像的结构布局。
+
+尽管 T2I 技术已经能够生成极具艺术感和构图美学的图像，但其本质上仍是对**二维像素分布**的建模。生成的图像缺乏内在的三维几何信息（如深度、法向），因此无法直接作为三维场景中的资产进行物理交互或多视角渲染。这也正是本研究引入“逆向投影”算法的动机所在：我们需要将 T2I 模型生成的二维美学“升维”到三维空间。
+
+\subsubsection{文本生成三维内容技术}
+为了解决二维生成的局限性，研究者们开始探索直接从文本生成三维内容（Text-to-3D）。该领域的开创性工作是 Google 提出的 DreamFusion \cite{poole2023dreamfusion}。该方法提出了一种分数蒸馏采样（Score Distillation Sampling, SDS）损失函数，利用预训练的 2D 扩散模型作为先验，去优化一个神经辐射场（NeRF），从而“凭空”捏造出一个符合文本描述的三维物体。随后，Lin 等人 \cite{lin2023magic3d} 提出的 Magic3D 引入了由粗到精（Coarse-to-Fine）的优化策略，显著提升了生成模型的分辨率和几何质量。
+
+然而，现有的 Text-to-3D 技术在工业应用中面临两大挑战：
 \begin{itemize}
-    \item \textbf{跨模态语义交互与视觉先验生成}：构建基于大语言模型（LLM）与文生图模型（SD）的交互框架，将抽象文本转化为具体的二维视觉参考。
-    \item \textbf{基于几何约束与重投影优化的参数逆向解算}：提出一种从二维构图特征到三维摄像机位姿的逆向映射算法，并引入迭代修正机制以最小化重投影误差。
-    \item \textbf{尺度自适应的动态运镜生成}：设计基于包围盒对角线的归一化度量标准，实现从静态单帧到动态轨迹的自适应扩展。
+    \item \textbf{几何拓扑不可控}：基于 NeRF 或隐式场生成的方法，其导出的网格模型（Mesh）往往布线混乱，难以进行UV展开、绑定骨骼或二次编辑，无法融入标准的动画制作管线。
+    \item \textbf{场景级控制缺失}：目前的主流算法多局限于生成单个孤立物体（Object-level），对于包含多个物体、复杂空间关系的场景级（Scene-level）生成与运镜控制，尚缺乏成熟的解决方案。
 \end{itemize}
 
-\section{本文组织结构}
-% TODO: 简要介绍各章节安排（本模板已自动生成目录，此处用文字串联即可）。
+因此，如何在保留标准三维资产工业规范（即使用人工制作的高质量模型）的前提下，利用 AIGC 的语义理解能力来驱动场景布局与相机运动，成为了一个极具价值的研究方向。
 
+\section{本文主要研究内容}
+
+针对三维内容生产中自然语言指令与底层工程参数之间的语义鸿沟问题，本文提出了一种基于 AIGC 分镜头引导的虚拟摄像机参数逆向求解方法。本文的主要研究内容如下：
+
+\begin{enumerate}
+    \item \textbf{基于 AIGC 的跨模态语义交互机制研究}
+    
+    针对传统运镜控制缺乏语义理解能力的问题，本文构建了一种“文本-图像-参数”的跨模态交互框架。利用大语言模型（LLM）对用户输入的自然语言指令进行意图解析与提示词优化，并驱动文生图（Text-to-Image）模型生成具备目标构图特征的二维参考图像。该机制有效地将抽象的视觉意图具象化为可视化的二维参考，为后续的参数求解提供了准确的语义锚点。
+
+    \item \textbf{基于几何逆向投影的摄像机位姿解算算法研究}
+    
+    针对从二维参考图像恢复三维空间信息的难题，本文提出了一种基于视锥体几何约束的逆向投影算法。该算法建立了一个包含目标物体真实尺度、二维图像像素特征与虚拟摄像机参数的数学模型。通过提取参考图像中目标物体的轴对齐包围盒（AABB）特征，结合三角成像原理与空间变换矩阵，精确反解出虚拟摄像机在局部坐标系下的距离、偏移量及旋转欧拉角，实现了从“二维构图”到“三维位姿”的逆向映射。
+
+    \item \textbf{场景尺度自适应与系统集成实现}
+    
+    为了解决单一算法难以适配多尺度目标物体（如从微观物体到宏观场景）的问题，本文设计了一种基于包围盒对角线的尺度归一化机制，实现了运镜距离的自适应动态调整。在此基础上，本文基于 Unreal Engine 5 引擎开发了原型系统，集成了 AIGC 推理后端与三维渲染前端，验证了所提方法在不同复杂场景下的有效性与鲁棒性。
+\end{enumerate}
+
+\section{本文组织结构}
+
+本文共分为六章，各章节的具体安排如下：
+
+\textbf{第一章 绪论}：阐述了虚拟运镜控制与 AIGC 内容生成的研究背景与意义，分析了当前技术面临的主要挑战与“语义鸿沟”问题。系统梳理了国内外在虚拟运镜控制、文本生成图像及文本生成三维内容等领域的研究现状，并总结了本文的主要研究内容与创新点。
+
+\textbf{第二章 相关理论与技术基础}：介绍了本文涉及的核心理论与技术栈，包括针孔相机模型与三维几何变换基础、生成式人工智能模型（如 Stable Diffusion）的基本原理，以及 Unreal Engine 5 引擎的架构与开发接口，为后续章节的算法实现奠定理论基础。
+
+\textbf{第三章 基于 AIGC 的跨模态语义解析与参考生成}：详细阐述了跨模态交互模块的设计与实现。重点介绍了如何利用大语言模型进行提示词工程优化，以及如何利用 ControlNet 等技术控制文生图模型生成具备特定构图特征的参考图像，并从图像中提取关键的几何特征。
+
+\textbf{第四章 基于几何逆向投影的摄像机位姿求解}：本章是论文的核心部分，详细推导了从二维图像特征到三维摄像机参数的数学映射关系。包括拍摄距离的逆向解算、视锥体截面的空间偏移计算以及摄像机旋转姿态的确定方法，并提出了尺度自适应优化策略。
+
+\textbf{第五章 系统实现与实验分析}：介绍了基于 UE5 的原型系统架构与关键模块实现。设计了多组对比实验，从构图还原度、尺度适应性及用户满意度等维度，对本文提出的方法进行了定性展示与定量评估，验证了方法的有效性。
+
+\textbf{第六章 总结与展望}：总结全文的研究工作与主要结论，客观分析了当前方法存在的局限性，并对未来的研究方向（如支持动态视频生成、多机位协同调度等）进行了展望。
 % =============================================================================
 % 第二章 相关理论与技术基础 (预计 6 页)
 % =============================================================================
