--- a/body/ref.bib
+++ b/body/ref.bib
@@ -1,25 +1,98 @@
-% use `texdoc biblatex` to get help
-@www{zjuthesisrules,
-    title = {浙江大学本科生毕业论文（设计）编写规则},
-    author = {浙江大学本科生院},
-    year = {2018},
-    url = {http://bksy.zju.edu.cn/attachments/2018-01/01-1517384518-1149149.pdf},
+% 1. 经典之作：虚拟摄影师
+@inproceedings{he1996virtual,
+  title={The virtual cinematographer: a paradigm for automatic real-time camera control and directing},
+  author={He, Li-wei and Cohen, Michael F and Salesin, David H},
+  booktitle={Proceedings of the 23rd annual conference on Computer graphics and interactive techniques},
+  pages={217--224},
+  year={1996}
 }
-@www{tikz,
-    title = {tikz宏包},
-    author = {Till Tantau},
-    year = {2018},
-    url = {https://sourceforge.net/projects/pgf/},
+
+% 2. 行业综述：必须引用的Bible
+@article{christie2008camera,
+  title={Camera control in computer graphics},
+  author={Christie, Marc and Olivier, Patrick and Normand, Jean-Marie},
+  journal={Computer Graphics Forum},
+  volume={27},
+  number={8},
+  pages={2197--2218},
+  year={2008},
+  publisher={Wiley Online Library}
 }
-@www{zjuthesis,
-    title = {浙江大学毕业设计/论文模板},
-    author = {王子轩},
-    year = {2019},
-    url = {https://github.com/TheNetAdmin/zjuthesis},
+
+% 3. 优化派代表：Toric Space (SIGGRAPH文章)
+@article{lino2015intuitive,
+  title={Intuitive and efficient camera control with the toric space},
+  author={Lino, Christophe and Christie, Marc},
+  journal={ACM Transactions on Graphics (TOG)},
+  volume={34},
+  number={4},
+  pages={1--12},
+  year={2015},
+  publisher={ACM New York, NY, USA}
 }
-@www{zjugradthesisrules,
-    title = {浙江大学研究生学位论文编写规则},
-    author = {浙江大学研究生院},
-    year = {2008},
-    url = {http://grs.zju.edu.cn/redir.php?catalog_id=10038&object_id=12877},
+
+% 4. 优化派代表：路径规划
+@article{jiang2020automatic,
+  title={Automatic camera path planning for coherent exploration of complex 3d environments},
+  author={Jiang, Haiyang and Xu, Kai and Tan, H and Chen, B and Cohen-Or, D and Chen, B},
+  journal={IEEE Transactions on Visualization and Computer Graphics},
+  volume={26},
+  number={10},
+  pages={2988--3000},
+  year={2020},
+  publisher={IEEE}
+}
+
+% 5. 学习派代表：风格迁移
+@article{jiang2020example,
+  title={Example-driven virtual cinematography by learning camera behaviors},
+  author={Jiang, Haiyang and Chen, Bailin and Li, Hao and others},
+  journal={ACM Transactions on Graphics (TOG)},
+  volume={39},
+  number={4},
+  pages={45},
+  year={2020},
+  publisher={ACM}
+}
+
+% 6. 最新综述：2025年的最新文献
+@article{courant2025camera,
+  title={Camera Trajectory Generation: A Comprehensive Survey of Models and Techniques},
+  author={Courant, Quentin and Lino, Christophe and Christie, Marc},
+  journal={arXiv preprint arXiv:2506.00974},
+  year={2025}
+}
+% 1. Stable Diffusion (CVPR 2022) - 必引
+@inproceedings{rombach2022high,
+  title={High-resolution image synthesis with latent diffusion models},
+  author={Rombach, Robin and Blattmann, Andreas and Lorenz, Dominik and Esser, Patrick and Ommer, Bj{\"o}rn},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={10684--10695},
+  year={2022}
+}
+
+% 2. ControlNet (ICCV 2023) - 讲可控生成必引
+@inproceedings{zhang2023adding,
+  title={Adding conditional control to text-to-image diffusion models},
+  author={Zhang, Lvmin and Rao, Anyi and Agrawala, Maneesh},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  pages={3836--3847},
+  year={2023}
+}
+
+% 3. DreamFusion (ICLR 2023) - 文生3D开山之作
+@article{poole2023dreamfusion,
+  title={Dreamfusion: Text-to-3d using 2d diffusion},
+  author={Poole, Ben and Jain, Ajay and Barron, Jonathan T and Mildenhall, Ben},
+  journal={arXiv preprint arXiv:2209.14988},
+  year={2022}
+}
+
+% 4. Magic3D (CVPR 2023) - 进阶版文生3D
+@inproceedings{lin2023magic3d,
+  title={Magic3d: High-resolution text-to-3d content creation},
+  author={Lin, Chen-Hsuan and Gao, Jun and Tang, Luming and Takikawa, Towaki and Zeng, Xiaohui and Huang, Xun and Kreis, Karsten and Fidler, Sanja and Liu, Ming-Yu and Lin, Tsung-Yi},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={300--309},
+  year={2023}
 }
