--- a/body/ref.bib
+++ b/body/ref.bib
@@ -96,3 +96,36 @@
   pages={300--309},
   year={2023}
 }
+% 1. 计算机视觉“圣经” - 用于引用 2.1 节的针孔相机模型公式
+@book{hartley2003multiple,
+  title={Multiple view geometry in computer vision},
+  author={Hartley, Richard and Zisserman, Andrew},
+  year={2003},
+  publisher={Cambridge university press}
+}
+
+% 2. 计算机图形学经典教材 - 用于引用 2.1 节的坐标系变换
+@book{szeliski2022computer,
+  title={Computer vision: algorithms and applications},
+  author={Szeliski, Richard},
+  year={2022},
+  publisher={Springer Nature}
+}
+
+% 3. CLIP模型 (OpenAI) - 用于引用 2.2 节提到的“条件编码器”
+@inproceedings{radford2021learning,
+  title={Learning transferable visual models from natural language supervision},
+  author={Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and others},
+  booktitle={International conference on machine learning},
+  pages={8748--8763},
+  year={2021},
+  organization={PMLR}
+}
+
+% 4. 游戏引擎架构 - 用于引用 2.3 节的 UE5 引擎架构
+@book{gregory2018game,
+  title={Game engine architecture},
+  author={Gregory, Jason},
+  year={2018},
+  publisher={CRC Press}
+}
